# simple-git

./: .gitattributes  .gitignore  .yarnrc.yml  0.x-1.0-MIGRATION.md  Cargo.toml  README.md  build.rs  example.mjs  index.d.ts  index.js  package.json  performance.mjs
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: async-network.spec.mjs  bitflags.spec.mjs  blame.spec.mjs  branch.spec.mjs  checkout.spec.mjs  config.spec.mjs  counts-sizes.spec.mjs  diff.spec.mjs  dispose-hardening.spec.mjs  dispose.spec.mjs  error-code.spec.mjs  fetch.spec.mjs  index.spec.mjs  merge-message.spec.mjs  modification.spec.mjs  push.spec.mjs  repo.spec.mjs  status.spec.mjs  tag.spec.mjs
docs/superpowers/plans/: 2026-06-30-api-1.0-breaking-changes.md  2026-06-30-api-1.0-breaking-sweep.md  2026-06-30-git-feature-suite-plan.md  2026-07-01-api-1.0-polish.md  2026-07-02-file-date-api-compat.md
docs/superpowers/specs/: 2026-06-30-file-modification-metadata-design.md  2026-06-30-file-modification-metadata-plan.md  2026-07-02-file-date-api-compat-design.md
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: package.json
src/: blame.rs  blob.rs  branch.rs  checkout.rs  commit.rs  config.rs  deltas.rs  diff.rs  error.rs  file_modification.rs  index.rs  lib.rs  object.rs  reference.rs  remote.rs  repo.rs  repo_builder.rs  rev_walk.rs  signature.rs  status.rs  tag.rs  tree.rs  util.rs
