[package]
edition = "2021"
name = "napi-rs_simple-git"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
git2 = { version = "0.14", features = ["vendored-libgit2", "vendored-openssl"] }
once_cell = "1"
parking_lot = "0.12"

[dependencies.napi]
version = "2"
default-features = false
features = ["napi3"]

[dependencies.napi-derive]
version = "2"

[target.'cfg(all(target_os = "linux", target_env = "gnu", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
dirs = "4"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
