[package]
edition = "2021"
name = "napi-rs_simple-git"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
git2 = { git = "https://github.com/rust-lang/git2-rs.git", rev = "502099a", version = "0.18", features = ["default", "vendored-libgit2", "vendored-openssl"] }
libgit2-sys = { git = "https://github.com/rust-lang/git2-rs.git", rev = "502099a", features = ["ssh", "https", "ssh_key_from_memory", "vendored", "vendored-openssl"] }
once_cell = "1"

[dependencies.napi]
version = "2"
default-features = false
features = ["async", "chrono_date", "napi6"]

[dependencies.napi-derive]
version = "2"

[target.'cfg(all(target_os = "linux", target_env = "gnu", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
dirs = "5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
